<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    android:background="@color/white_color">
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main"
    android:background="@color/white_color"
    android:gravity="center">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="@dimen/tile_size"
        android:textColor="@color/black_color"
        android:text="@string/title_text"
        android:layout_margin="@dimen/activity_vertical_margin"/>

    <Button

        style="@style/ButtonStyle"
        android:id="@+id/about_button"
        android:text="@string/aboutButton_label"
        android:onClick="displayAbout" />

    <Button

        style="@style/ButtonStyle"
        android:text="@string/generateErrorButton_label"
        android:id="@+id/generateError_button"
        android:onClick="generateError" />

    <Button

        style="@style/ButtonStyle"
        android:text="@string/ticTacToeButton_label"
        android:onClick="launchTicTacToe"
        android:id="@+id/ticTacToe_button"/>

    <Button

        style="@style/ButtonStyle"
        android:id="@+id/dictionary_button"
        android:text="@string/dictionaryButton_label"
        android:onClick="launchDictionary" />

    <Button

        style="@style/ButtonStyle"
        android:id="@+id/wordGame_button"
        android:text="@string/wordGame_Button_label"
        android:onClick="launchWordGame" />

    <Button

        style="@style/ButtonStyle"
        android:id="@+id/communication_button"
        android:text="Communication"
        android:onClick="launchComm" />

    <Button

        style="@style/ButtonStyle"
        android:id="@+id/twoPlayerGame_button"
        android:text="Two Player Word Game"
        android:textSize="17sp"
        android:onClick="launchTwoPGame" />

    <Button

        style="@style/ButtonStyle"
        android:id="@+id/trickiest_Button"
        android:text="Trickiest Part"
        android:onClick="launchTrickiest" />

    <Button

        style="@style/ButtonStyle"
        android:id="@+id/finalProject_Button"
        android:text="Final Project"
        android:onClick="launchProject" />

    <Button

        style="@style/ButtonStyle"
        android:id="@+id/quit_button"
        android:text="@string/quitButton_label"

        android:onClick="quitApp" />

</LinearLayout>

</ScrollView>