<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dictionaryScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    tools:context=".dictionary.TestDictionary">

    <TextView

        android:id="@+id/title"
        android:layout_width= "match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="@dimen/button_textsize"
        android:textColor="@color/white_color"
        android:text="@string/dictionaryButton_label"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@color/black_color"/>

    <EditText
        android:id="@+id/searchBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black_color"
        android:hint="@string/search_textBox"
        android:inputType="textNoSuggestions"
        android:layout_below="@id/title"
        />

    <Button

        style="@style/ButtonStyle_Dictionary"
        android:id="@+id/clear_button"
        android:text="@string/clearButton_label"
        android:onClick="clearText"
        android:layout_below="@id/searchBox"
        android:layout_alignParentLeft="true" />

    <Button

        style="@style/ButtonStyle_Dictionary"
        android:text="@string/returnToMenu_label"
        android:id="@+id/returnToMenu_button"
        android:onClick="returnToMenu"
        android:layout_below="@id/clear_button"
        android:layout_alignParentLeft="true"/>

    <Button

        style="@style/ButtonStyle_Dictionary"
        android:text="@string/ack_label"
        android:onClick="displayAck"
        android:id="@+id/acknowledgements_button"
        android:layout_below="@id/returnToMenu_button"
        android:layout_alignParentLeft="true"/>

     <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/acknowledgements_button"
        android:id="@android:id/list"
        android:drawSelectorOnTop="false"/>

</RelativeLayout>

</ScrollView>