<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <TextView

        android:id="@+id/title"
        android:layout_width= "match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="@dimen/button_textsize"
        android:textColor="@color/white_color"
        android:text="User Selection"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@color/black_color"/>

    <TextView
        android:id="@+id/communication_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/communication_edit_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="enter username ..."
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textColorHint="#238745"
        android:textSize="16sp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stretchColumns="*" >

        <TableRow>

            <Button
                android:id="@+id/communication_registor_button"
                android:onClick="onClick"
                android:text="@string/register" />

            <Button
                android:id="@+id/communication_unregistor_button"
                android:onClick="onClick"
                android:text="@string/unregister" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/communication_edit_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="input message here ..."
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textColorHint="#238745"
        android:textSize="16sp"
        />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stretchColumns="*" >

        <TableRow>
            <Button
                android:id="@+id/communication_clear"
                android:onClick="onClick"
                android:text="@string/clear_label" />
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CLICK ON A USERNAME TO START THE GAME:"
        android:textSize="16sp"
        android:textColor="#238745"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@android:id/list"
        android:drawSelectorOnTop="false"/>

</LinearLayout>